--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs: # a collection of steps
           command: npm test
       - run: # run coverage report
           name: code-coverage
-          command: ./node_modules/.bin/nyc report --reporter=text-lcov
+          command: jest --collectCoverage=true
       - store_artifacts: # special step to save test results as as artifact
-          path: test-results.xml
+          path: coverage
           prefix: tests
       - store_artifacts:
           path: coverage
