--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,9 @@ jobs: # a collection of steps
       - run: # run tests
           name: test
           command: npm test
+       - run:
+          name: "Run Jest and Collect Coverage Reports"
+          command: jest --collectCoverage=true
+      - store_artifacts:
+          path: coverage
     
