--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,20 @@ jobs: # a collection of steps
       - run: # run tests
           name: test
           command: npm test
+      - run: npm install mocha-junit-reporter # just for CircleCI
+       # Run mocha
       - run:
-          name: "Run Jest and Collect Coverage Reports"
-          command: jest --collectCoverage=true
-      - store_artifacts:
-          path: coverage
-    
+          name: npm test
+          command: ./node_modules/.bin/nyc ./node_modules/.bin/mocha --recursive --timeout=10000 --exit --reporter mocha-junit-reporter --reporter-options mochaFile=reports/mocha/test-results.xml
+          when: always
+
+
+     - run:
+        name: code-coverage
+         command: |
+                    mkdir coverage
+                    # nyc report requires that nyc has already been run,
+                    # which creates the .nyc_output folder containing necessary data
+                    ./node_modules/.bin/nyc report --reporter=text-lcov > coverage/lcov.info
+                    ./cc-test-reporter after-build -t lcov
+         when: always
