--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
+    "coveralls": "^3.0.3",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.4.0",
     "grunt-contrib-jshint": "~0.6.4",
@@ -54,6 +55,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mocha-test": "~0.7.0",
     "grunt-nodemon": "~0.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1",
     "should": "~1.3.0",
     "supertest": "~0.8.0"
