--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,14 @@ before_script:
   - npm install grunt-bower-task
   - npm install grunt-cli
 #  - mongo mydb_test --eval 'db.addUser("travis", "test");'
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=410a965e5ce79b5ffe3fd354fc74b4ed9e6fee15b84fc44a5052606a7c4f426a
+install: 
+  - npm install
+
+script: npm test
+after_success:
+  - npm run coverage
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
