--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
-    "test": "node node_modules/grunt-cli/bin/grunt test",
+    "test": "jest", 
+    "test:watch": "jest --watch",   
+    "test:coverage": "jest --coverage --colors", 
     "postinstall": "node node_modules/grunt-cli/bin/grunt install"
   },
   "dependencies": {
@@ -55,6 +57,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mocha-test": "~0.7.0",
     "grunt-nodemon": "~0.1.1",
+    "jest": "^24.8.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1",
     "should": "~1.3.0",
