--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,11 @@
-version: 2 # use CircleCI 2.0
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
-    working_directory: ~/mern-starter # directory where steps will run
-    docker: # run the steps with Docker
-      - image: circleci/node:9.4.0 # ...with this image as the primary container; this is where all `steps` will run
-      - image: mongo:3.4.4 # and this image as the secondary service container
-    steps: # a collection of executable commands 
-      - checkout # special step to check out source code to working directory
-      - run:
-          name: update-npm 
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache 
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
       - run: # run tests
           name: test
           command: npm test
       - run: # run coverage report
-          #name: code-coverage
-         #command: './node_modules/.bin/nyc report --reporter=text-lcov'
+          name: code-coverage
+          command: jest --collectCoverage=true
       - store_artifacts: # special step to save test results as as artifact
-          path: test-results.xml
+          path: coverage
           prefix: tests
       - store_artifacts:
           path: coverage
@@ -39,5 +18,3 @@ deployment:
     branch: master
     heroku:
       appname: cardsforhumanityapp
-  
-
