--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/cli": "^8.0.1",
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
+    "body-parser": "^1.19.0",
     "bower": "~1.3.8",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
