--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@
       - store_test_results: # special step to upload test results for display in Test Summary
           path: test-results.xml
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-deployment:
-  production: # just a label; label names are completely up to you
-    branch: master
-    heroku:
-      appname: cardsforhumanityapp
+      - deployment:
+      - production: # just a label; label names are completely up to you
+          branch: master
+          heroku:
+            appname: cardsforhumanityapp
