--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "coveralls": "^3.0.3",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.4.0",
@@ -63,5 +65,10 @@
     "nyc": "^14.1.1",
     "should": "~1.3.0",
     "supertest": "~0.8.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/test/jest/**/*.js?(x)"
+    ]
   }
 }
