--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run: jest --collectCoverage=true
 
       #deployment
-      - deployment:
-            production: 
-                branch: master
-                heroku: cardsforhumanityapp
+deploy:
+    production: 
+        branch: master
+        heroku: cardsforhumanityapp
