--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-
 # Javascript Node 8 simple CircleCI 2.0 configuration file
 # Eduardo San Martin Morote
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
@@ -29,7 +28,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install
+     # - run: npm install
 
       - save_cache:
           paths:
