--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
     "test": "jest",
-    "test:coverage": "jest --coverage --colors",
+    "test:coverage": "jest --coverage --colors --forceExit",
     "postinstall": "node node_modules/grunt-cli/bin/grunt install"
   },
   "dependencies": {
